--- a/.github/workflows/generate-pdf-preview.yml
+++ b/.github/workflows/generate-pdf-preview.yml
@@ -1,5 +1,7 @@
 name: Generate PDF Preview Images
 
+
+
 on:
   push:
     paths:
@@ -11,6 +13,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
 
     steps:
       - name: 🛎️ Checkout repository
@@ -51,4 +56,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/pdf-images README.md
           git diff --cached --quiet || git commit -m "chore: update PDF preview images"
-          git push
+          git push origin HEAD:${{ github.ref_name }}
